# VLoom

./: .gitignore  CLAUDE.md  CMakeLists.txt  Human_README.md  License  README.md  THIRD_PARTY_LICENSES.txt  imgui.ini  toolchain-mingw.cmake
VLoom-windows/shaders/: default.frag  default.vert
assets/Textures/Bricks076A_1K-JPG (2)/: Bricks076A_1K-JPG.blend  Bricks076A_1K-JPG.mtlx  Bricks076A_1K-JPG.tres  Bricks076A_1K-JPG.usdc
shaders/: default.frag  default.vert
src/: Camera.hpp  Entity.hpp  Mesh.hpp  MeshCache.hpp  Player.hpp  RenderDevice.hpp  SceneEditor.hpp  SceneObject.hpp  SceneSerializer.hpp  Shader.hpp  Texture.hpp  TextureCache.hpp  main.cpp
